--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.portfolio_mobile">
+    package="me.kparobor">
    <application
         android:label="portfolio_mobile"
         android:name="${applicationName}"
